--- a/Challenge04LGBB/View/Base.lproj/ChosenRecipe.storyboard
+++ b/Challenge04LGBB/View/Base.lproj/ChosenRecipe.storyboard
@@ -155,6 +155,7 @@
                                                     <constraint firstAttribute="height" constant="240" id="MsU-0b-5MT"/>
                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="374" id="tDY-HJ-GrS"/>
                                                 </constraints>
+                                                <color key="sectionIndexBackgroundColor" name="CorDaview"/>
                                                 <prototypes>
                                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="65" id="eEo-RG-SOQ" customClass="TableIngredientCell" customModule="Challenge04LGBB" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="44.5" width="374" height="65"/>
@@ -223,6 +224,7 @@
                                                     <constraint firstAttribute="height" constant="240" id="NjV-BV-8bD"/>
                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="374" id="c1x-bz-6pG"/>
                                                 </constraints>
+                                                <color key="sectionIndexBackgroundColor" name="CorDaview"/>
                                                 <prototypes>
                                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell2" rowHeight="65" id="kMy-V3-4LC" customClass="TableEtapasCell" customModule="Challenge04LGBB" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="44.5" width="374" height="65"/>
@@ -322,7 +324,7 @@
                                                 </constraints>
                                             </imageView>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" name="CorDaview"/>
                                         <constraints>
                                             <constraint firstItem="GKb-m9-hQD" firstAttribute="leading" secondItem="Jcb-0U-fo5" secondAttribute="leading" id="1kG-a2-V2c"/>
                                             <constraint firstItem="GKb-m9-hQD" firstAttribute="trailing" secondItem="NNA-Xk-G1p" secondAttribute="trailingMargin" id="4Dn-ru-B1M"/>
@@ -360,6 +362,7 @@
                                         </constraints>
                                     </view>
                                 </subviews>
+                                <color key="backgroundColor" name="CorDaview"/>
                                 <constraints>
                                     <constraint firstItem="fns-oe-04J" firstAttribute="bottom" secondItem="NNA-Xk-G1p" secondAttribute="bottom" id="9pa-pd-tFF"/>
                                     <constraint firstAttribute="bottom" secondItem="NNA-Xk-G1p" secondAttribute="bottom" id="Jn6-Zd-czI"/>
@@ -376,7 +379,7 @@
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="CorDaview"/>
                         <constraints>
                             <constraint firstItem="iVs-P4-tZT" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="Ar4-AT-AGI"/>
                             <constraint firstItem="iVs-P4-tZT" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="hgl-Sb-c60"/>
@@ -434,6 +437,9 @@
         <image name="paodequeijo.1" width="230" height="230"/>
         <image name="settings-red" width="33" height="32"/>
         <image name="timer-32px" width="33" height="32"/>
+        <namedColor name="CorDaview">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="Mix_Magenta">
             <color red="0.97647058823529409" green="0.38039215686274508" blue="0.38823529411764707" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
