--- a/Challenge04LGBB/View/Base.lproj/ConfigScreen.storyboard
+++ b/Challenge04LGBB/View/Base.lproj/ConfigScreen.storyboard
@@ -5,7 +5,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -127,7 +126,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" name="CorDaview"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="Pvq-dy-iuL" secondAttribute="trailing" constant="40" id="3wB-Zh-8hW"/>
                                             <constraint firstAttribute="trailing" secondItem="fMi-fN-Xh8" secondAttribute="trailing" constant="20" id="4hl-yY-Jnp"/>
@@ -145,6 +144,7 @@
                                         </constraints>
                                     </view>
                                 </subviews>
+                                <color key="backgroundColor" name="CorDaview"/>
                                 <constraints>
                                     <constraint firstItem="ZXm-SK-Dmr" firstAttribute="leading" secondItem="Nt9-1j-5pc" secondAttribute="leading" id="77Z-yj-SGx"/>
                                     <constraint firstItem="ZXm-SK-Dmr" firstAttribute="top" secondItem="v3w-UN-iUX" secondAttribute="top" id="Fc3-Md-CgU"/>
@@ -208,8 +208,5 @@
         <namedColor name="LabelMagenta">
             <color red="0.99607843137254903" green="0.90588235294117647" blue="0.92156862745098034" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
