--- a/Challenge04LGBB/View/Base.lproj/ListRecipesScreen.storyboard
+++ b/Challenge04LGBB/View/Base.lproj/ListRecipesScreen.storyboard
@@ -222,11 +222,12 @@
                                             </label>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" estimatedSectionHeaderHeight="-1" sectionFooterHeight="28" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="F1W-3H-fB2">
                                                 <rect key="frame" x="20" y="655" width="374" height="438"/>
+                                                <color key="backgroundColor" name="CorDaview"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="438" id="dCo-xV-Hmy"/>
                                                 </constraints>
                                                 <color key="separatorColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="sectionIndexBackgroundColor" name="CorDaview"/>
                                                 <prototypes>
                                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="120" id="FCd-0w-sme" customClass="RecipesTableViewCell" customModule="Challenge04LGBB" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="44.5" width="374" height="120"/>
@@ -357,7 +358,7 @@
                                                 <sections/>
                                             </tableView>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" name="CorDaview"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="My5-cT-MKU" secondAttribute="trailing" constant="-44" id="5Ph-n3-yBV"/>
                                             <constraint firstItem="NvP-H6-gWn" firstAttribute="leading" secondItem="gHv-2v-PSt" secondAttribute="leading" constant="20" id="74F-MZ-SG2"/>
@@ -379,6 +380,7 @@
                                         </constraints>
                                     </view>
                                 </subviews>
+                                <color key="backgroundColor" name="CorDaview"/>
                                 <constraints>
                                     <constraint firstItem="e58-0S-6Dt" firstAttribute="bottom" secondItem="gHv-2v-PSt" secondAttribute="bottom" id="FVZ-rd-b4e"/>
                                     <constraint firstAttribute="trailing" secondItem="gHv-2v-PSt" secondAttribute="trailing" id="Mbh-j3-daL"/>
@@ -395,7 +397,7 @@
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="CorDaview"/>
                         <constraints>
                             <constraint firstItem="h7u-5e-vDg" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="K5Y-Sc-o2c"/>
                             <constraint firstAttribute="bottom" secondItem="h7u-5e-vDg" secondAttribute="bottom" id="k6V-Jo-aQ2"/>
@@ -453,6 +455,9 @@
         <image name="paodequeijo.1" width="230" height="230"/>
         <image name="timer-16px" width="16" height="16"/>
         <image name="timer-32px" width="33" height="32"/>
+        <namedColor name="CorDaview">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="LabelMagenta">
             <color red="0.99607843137254903" green="0.90588235294117647" blue="0.92156862745098034" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
@@ -464,9 +469,6 @@
         </namedColor>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
